bugfix, finishing the project, README